--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "date-fns": "^1.30.1",
     "expo": "^32.0.0",
+    "lodash": "^4.17.11",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
