Minor updates for ios

--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": false
+      "supportsTablet": false,
+      "bundleIdentifier": "io.github.jonjlee"
     },
     "description": ""
   }
