--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
   },
   "dependencies": {
     "date-fns": "^1.30.1",
-    "expo": "^32.0.0",
-    "lodash": "^4.17.11",
+    "expo": "^35.0.0",
+    "expo-permissions": "~7.0.0",
+    "expo-speech": "~7.0.0",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-elements": "^1.1.0",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-elements": "^1.2.7",
     "react-native-render-html": "^4.1.2",
-    "react-navigation": "^3.3.2"
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^7.0.0"
   },
   "private": true
 }
